syntax = "proto3";

package kv_service;
option go_package = ".;protos";

message SubscriptionRequest {
  uint32 precision = 1;
  bytes table_schema = 2;
  bytes record_data = 3;
}

message SubscriptionResponse {}

service TSKVService {
  rpc WriteSubscription(stream SubscriptionRequest) returns (stream SubscriptionResponse){};
}
